Updated the createFlowchartProjectUseCase

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -94,12 +94,12 @@ Only the basic components of standard flowcharts are necessary.\\
 \subsection{createFlowchartProject}
 Creates an environment to enable users to start building flowcharts.\newline\newline
 \textbf{Pre Condition:} Planning canvas must be blank.\newline\newline
-\textbf{Post Condition:} New canvas created\newline
+\textbf{Post Condition:} New canvas with Start and Return component created.\newline
 \textbf{Post Condition:} Flowchart tools ready for use\newline
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{createNewFlowchartProject.eps}
 \caption{createFlowchartProject Use Case Diagram}
 \end{figure}
 
