Modified Project vision

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -28,7 +28,9 @@ The flowchart planning and simulation  tool is a visual tool which aims to intro
 
 \subsection{Project vision}
 
-This project sets out to create an application for the planning and simulation of flowcharts, which
+Most first year computer science students come from a backgroud void of programming to a programming backgroud 
+and they struggle to grasp the logical programming concepts quickly and easily.
+Therefore, this project sets out to create an application with a simplified and easy-to-use interface for the planning and simulation of flowcharts, which
 can be used in an education setting for an introductory program logic course. The objective is to
 develop an application that can feasibly be used in such a practical setting. The application must be
 visual in nature, due to the visual nature of flowcharts. The application must facilitate exploration
