Editing: editFlowchartComponent use case

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -133,9 +133,9 @@ Provides users with functionality to drag and drop flowchart components into the
 \newpage
 \subsection{editFlowchartComponent}
 
-The editFlowchartComponent use case provides functionality for the user to edit each component of the flowchart on a canvas \newline\newline
-\textbf{Pre Condition:} Component must have been added\newline\newline
-\textbf{Post Condition:} Component has been edited
+The editFlowchartComponent use case provides functionality for the user to edit each component of the flowchart on the canvas \newline\newline
+\textbf{Pre Condition:} Component must have been added to the canvas\newline\newline
+\textbf{Post Condition:} Component has been edited and saved
 
 \begin{figure}[H]
   \centering
