Updated editFlowchartComponent Use case diagram

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -139,7 +139,7 @@ The editFlowchartComponent use case provides functionality for the user to edit 
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{editFlowchartComponent.eps}
 \caption{editFlowchartComponent Use Case Diagram}
 \end{figure}
 
