Updated editFlowchartComponent activity diagram

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -145,7 +145,7 @@ The editFlowchartComponent use case provides functionality for the user to edit 
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{editFlowchartComponentActivity.eps}
 \caption{editFlowchartComponent Activity Diagram}
 \end{figure}
 
