Updated saveFlowchart activity diagram

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -176,7 +176,7 @@ The saveFlowchart use case provides functionality for the user to save a flowcha
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{saveFlowchartUseCase.eps}
 \caption{saveFlowchart Use Case Diagram}
 \end{figure}
 
