Updated Functional requirements pdf

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -135,7 +135,8 @@ Provides users with functionality to drag and drop flowchart components into the
 
 The editFlowchartComponent use case provides functionality for the user to edit each component of the flowchart on the canvas \newline\newline
 \textbf{Pre Condition:} Component must have been added to the canvas\newline\newline
-\textbf{Post Condition:} Component has been edited and saved
+\textbf{Post Condition:} Component has been edited and saved\newline
+\textbf{Post Condition:} Edited component has been saved
 
 \begin{figure}[H]
   \centering
