Updating user manual

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -25,7 +25,19 @@
 		\subsection{System Installation}
 		
 		This system is a "plug-and-play" type of application, for which the executable file can be found from the University of Pretoria (Computer Science) website.
-	
+		
+
+
+		
+		
+
+% This section forms the bulk of the user manual.
+
+
+
+
+
+
 \section{Getting Started}
 	
 	For one to get to use the system, that particular user must be registered at the University of Pretoria, and have access to the Linux platform which is granted by the Department of Computer Science. From Linux, the user must be able to access the application, without any further installation or signing-up required.
