--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -13,12 +13,16 @@
 \section{General Information}
 	\subsection{System Overview}
 	
-		Flowchart Simulation Tool is an application which allows for 				designing and executing flowchart diagrams. This application is 		intended for academic purposes for students with basic knowledge of 		programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like.
-	
+		Flowchart Simulation Tool is an application which allows for designing and executing flowchart diagrams. This application is intended for academic purposes for students with basic knowledge of programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like.
+		
+		\newline
+		
+		Furthermore, the system can be used in the commercial industry for various purposes.
+		
 \section{System Summary}
 	\subsection{System Configuration}
 		
-		The flowchart tool is intended to operate on any Linux 						distribution. However, it can also be used on Windows and 			Mac OS. It is not a very sophisticated software, not so many configurations required.
+		The flowchart tool is intended to operate on any Linux distribution. However, it can also be used on Windows and Mac OS. It is not a very sophisticated software, not so many configurations required.
 		
 		Any version of Java should be installed to allow for successful execution of the program. 
 		
