--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -13,9 +13,7 @@
 \section{General Information}
 	\subsection{System Overview}
 	
-		Flowchart Simulation Tool is an application which allows for designing and executing flowchart diagrams. This application is intended for academic purposes for students with basic knowledge of programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like.
-		
-		\newline
+		Flowchart Simulation Tool is an application which allows for designing and executing flowchart diagrams. This application is intended for academic purposes for students with basic knowledge of programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like. \newline
 		
 		Furthermore, the system can be used in the commercial industry for various purposes.
 		
@@ -31,9 +29,15 @@
 		This system is a "plug-and-play" type of application, for which the executable file can be found from the University of Pretoria (Computer Science) website.
 		
 
+\section{Getting Started}
+	
+	For one to get to use the system, that particular user must be registered at the University of Pretoria, and have access to the Linux platform which is granted by the Department of Computer Science. From Linux, the user must be able to access the application, without any further installation or signing-up required.
 
-		
-		
+
+
+
+
+
 
 % This section forms the bulk of the user manual.
 
@@ -42,26 +46,35 @@
 
 
 
-\section{Getting Started}
-	
-	For one to get to use the system, that particular user must be registered at the University of Pretoria, and have access to the Linux platform which is granted by the Department of Computer Science. From Linux, the user must be able to access the application, without any further installation or signing-up required.
+
+
 	
 	\subsection{Running Software}
-		The application will not require any installation. To run the 			application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
+		The application will not require any installation. To run the application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
 		
 		\subsection{Software Layout}
-		The layout is composed of the canvas, flowchart tools and menu options. \newline
+		The layout is composed of the canvas, flowchart tools and menu options. \newline 
+		The figure below depicts the general layout of the entire system. \newline \newline
+		\includegraphics[width=\textwidth]{SystemLayout.jpg}
+		\begin{center}
+		Figure: The General System Layout.
+		\end{center}
+		
 		
 		\begin{itemize}
-			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas. See figure below.
+			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas. See figure below.\newline
+			There are components which are already implemented at start of the system, the 'start' and 'end' blocks are initialised by default on the canvas.\newline \newline
+			\includegraphics[width=\textwidth]{Canvas.jpg}
+			\begin{center}
+		Figure: The Canvas.
+		\end{center}
 			
 			\item \textbf{Flowchart Tools:} This contains all the tools 				required to construct the flowchart. All the components will be 			dragged and dropped onto the canvas. Flowchart Tools also includes 				buttons to run the simulation step-by-step and start-to-end. See figure below.
 			
 			\item \textbf{Menu Options -} The menu option provides options of 				creating, saving, deleting and loading projects onto the canvas. See figure below.
 			
 		\end{itemize}
-	
-	\includegraphics[width=\textwidth]{ManualDemo.jpg}
+
 	\newpage
 \section{Using the System}
 	\subsection{Creating New Project}
