User manual update

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -57,38 +57,56 @@
 		The figure below depicts the general layout of the entire system. \newline \newline
 		\includegraphics[width=\textwidth]{SystemLayout.jpg}
 		\begin{center}
-		Figure: The General System Layout.
+		Figure: The General System Layout.\newline
 		\end{center}
 		
 		
 		\begin{itemize}
 			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas. See figure below.\newline
 			There are components which are already implemented at start of the system, the 'start' and 'end' blocks are initialised by default on the canvas.\newline \newline
-			\includegraphics[width=\textwidth]{Canvas.jpg}
+			\includegraphics[width=11.5cm]{Canvas.jpg}
 			\begin{center}
-		Figure: The Canvas.
+		Figure: The Canvas.\newline
 		\end{center}
 			
-			\item \textbf{Flowchart Tools:} This contains all the tools 				required to construct the flowchart. All the components will be 			dragged and dropped onto the canvas. Flowchart Tools also includes 				buttons to run the simulation step-by-step and start-to-end. See figure below.
+			\item \textbf{Flowchart Tools:} This contains all the tools required to construct the flowchart. All the components will be dragged and dropped onto the canvas (as illustrated by the the figure below), with the tools on the left and the canvas on the right. All the necessary components to build a flowchart are listed on the left toolbar.\newline \newline
+			\includegraphics[width=11.5cm]{Tools.jpg}
+			\begin{center}
+		Figure: Flowchart Tool Components.\newline
+		\end{center} 
 			
-			\item \textbf{Menu Options -} The menu option provides options of 				creating, saving, deleting and loading projects onto the canvas. See figure below.
+						
+			\item \textbf{Menu Options -} The menu option provides options of creating, saving, deleting and loading projects onto the canvas. Also, this provides the user with many more options which are accessible by hovering over the name of the option. The figure below shows the functionality of all this.\newline \newline
+			\includegraphics[width=11.5cm]{Menu.jpg}
+			\begin{center}
+		Figure: Menu Bar.
+		\end{center}
+			
 			
 		\end{itemize}
 
 	\newpage
+	
+	
+	
+%%%%%%%%%%%%%%%%%% Very important %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	
+	
+	
 \section{Using the System}
 	\subsection{Creating New Project}
 	
-		To create a new project select "File" in the menu bar and a drop down menu will appear. Select the "Create New Project" option, a pop-up window will appear requesting the desired file name for the project.
+	When the application is opened for the first time, a default project is created with a default flowchart, which compiles and execute without any output generated. The user then will start his/her own building of the flowchart from already generated default flowchart. This is also demonstrated by the figure on general flowchart layout. \newline\newline
+However, the user can create new project from the menu bar. To create a new project select "File" in the menu bar and a drop down menu will appear. Select the "New" option, a pop-up window will appear requesting the desired file name for the project. Enter the file name and press the enter key on the keyboard, then the new project with the default flowchart will be created. \newline
 		
 		
 	\subsection{Adding Components to Canvas}
 	
-	Adding a component to the canvas is a simple as dragging and dropping a component from the Flowchart Tools. Select the component that you wish to add to the canvas and then drag it to the desired location on the canvas and then drop it.
+	From the created project, construction starts with dragging the components from the tool bar to the canvas. Adding components to the canvas is quite simple, drag the desired component from the tool bar and drop it onto the canvas. The component will be locally saved on the canvas, continue doing so until the building is complete.
 	
 	\subsection{Editing Component}
 	
-	Editing the component entails manipulation of the features and adding code inside the component. To edit the component double-click on the component and the a pop-up window will appear with the options of changing features or adding code.
+	Editing the component entails manipulation of the features and adding code inside the component. To edit the component click on the component that you want to edit and the a pop-up window will appear on the far left side of the application with the options of changing features or adding code.
 		
 	\subsection{Removing Components from Canvas}
 	
