--- a/Unit Testing/Revised JB version/src/config/lang/descriptions.properties
+++ b/Unit Testing/Revised JB version/src/config/lang/descriptions.properties
@@ -25,6 +25,7 @@ SCRIPT.help=<html>Embedd script<hr/>
 MODULE.help=<html>Module block<hr/>
 FORLOOP.help=<html>For Loop<hr/>
 WHILELOOP.help=<html>While Loop<hr/>
+DOWHILELOOP.help=<html>Do While Loop<hr/>
 LOGO.help=<html>logo<hr/>
 CANVAS2D.help=<html>canvas2d<hr/>
 canvas2d=Canvas 2d
