--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -195,13 +195,13 @@ loadFlowchart: users load flowcharts from existing files. The file is editable, 
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{loadFlowchart.eps}
 \caption{loadFlowchart Use Case Diagram}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{loadFlowchartActivityDiagram.eps}
 \caption{loadFlowchart Activity Diagram}
 \end{figure}
 
