--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -107,7 +107,7 @@ Creates an environment to enable users to start building flowcharts.\newline\new
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{createNewFlowchartProjectActivity.eps}
 \caption{createFlowchartProject Activity Diagram}
 \end{figure}
 
