Updated the addFlowchart usecase

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -114,9 +114,9 @@ Creates an environment to enable users to start building flowcharts.\newline\new
 \newpage
 \subsection{addFlowchartComponent}
 
-Provides users with functionality to drag and drop flowchart components into the planning canvas.\newline\newline
-\textbf{Pre Condition:} Canvas is available.\newline\newline
-\textbf{Post Condition:} Component has been added to flowchart.
+Provides users with functionality to select the flowchart components they want to add and place it on the planning canvas.\newline\newline
+\textbf{Pre Condition:} Canvas is available and flowchart exist.\newline\newline
+\textbf{Post Condition:} Component has been added to flowchart and appers on canvas with the necessary connections, if any.
 
 \begin{figure}[H]
   \centering
