Added the addFlowchart usecase diagram

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -120,7 +120,7 @@ Provides users with functionality to select the flowchart components they want t
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{addFlowChartComponent.eps}
 \caption{addFlowchartComponent Use Case Diagram}
 \end{figure}
 
