--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -126,7 +126,7 @@ Provides users with functionality to select the flowchart components they want t
 
 \begin{figure}[H]
   \centering
-\includegraphics[width=200px]{figure.jpg}
+\includegraphics[width=500px]{addFlowchartComponentActivity.eps}
 \caption{addFlowchartComponent Activity Diagram}
 \end{figure}
 
