--- a/Documentation/Functional Requirements/Report/titlepage.tex
+++ b/Documentation/Functional Requirements/Report/titlepage.tex
@@ -3,7 +3,7 @@
 		
 		\begin{figure}[t]
 			\centering
-			\includegraphics[width=350px]{UP_Logo.png}
+			%\includegraphics[width=350px]{UP_Logo.png}
 		\end{figure}		
 	
 	
@@ -23,19 +23,18 @@
 		
 		%\begin{minipage}{0.4\textwidth}
 
-		\begin{flushright} \large			
-			Goodness Adegbenro 13046412\newline
-			Tshepiso Magagula 12274195\newline
-			Hlavutelo Maluleke 12318109\newline			
-			Xoliswa Ntshingila 13410378\newline
+		\begin{flushright} \large
 			Lelethu Zazaza 13028023\newline
+			Goodness Adegbenro 13046412\newline
+			Hlavutelo Maluleke 12318109\newline
+			Tshepiso Magagula 12274195\newline
 		\end{flushright}
 		%\end{minipage}
 		
 	
 		
 		\textbf{Git repository link:\\}
-		 \url{https://github.com/COS301-ThinkTech/Flowchart-planning-and-simulation-tool}
+		 \url{ https://github.com/COS301-ThinkTech}
 		
 		\vfill
 		
