Update functional requirements.

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -82,10 +82,10 @@ Only the basic components of standard flowcharts are necessary.\\
 The deleteFlowchartProject use case serves the purpose of removing a flowchart project.
 
 \subsubsection{Use case diagram}
-%\includegraphics[width=500px]{deleteFlowchartProjectUseCase.jpg}
+\includegraphics[width=500px]{deleteFlowchartProjectUseCase.jpg}
 
 \subsubsection{Activity diagram}
-%\includegraphics[width=500px]{deleteFlowchartProject.jpg}
+\includegraphics[width=500px]{deleteFlowchartProject.jpg}
 
 \subsection{editFlowchartComponent}
 The editFlowchartComponent use case provides functionality for the user to edit each component of the flowchart on a canvas.\newline\newline
