Revert "Update functional requirements."
This reverts commit de042612309b006eebe5a52bb7554b242192fae7.

--- a/Documentation/Functional Requirements/Report/titlepage.tex
+++ b/Documentation/Functional Requirements/Report/titlepage.tex
@@ -3,7 +3,7 @@
 		
 		\begin{figure}[t]
 			\centering
-			%\includegraphics[width=350px]{UP_Logo.png}
+			\includegraphics[width=350px]{UP_Logo.png}
 		\end{figure}		
 	
 	
@@ -23,18 +23,19 @@
 		
 		%\begin{minipage}{0.4\textwidth}
 
-		\begin{flushright} \large
-			Lelethu Zazaza 13028023\newline
+		\begin{flushright} \large			
 			Goodness Adegbenro 13046412\newline
-			Hlavutelo Maluleke 12318109\newline
 			Tshepiso Magagula 12274195\newline
+			Hlavutelo Maluleke 12318109\newline			
+			Xoliswa Ntshingila 13410378\newline
+			Lelethu Zazaza 13028023\newline
 		\end{flushright}
 		%\end{minipage}
 		
 	
 		
 		\textbf{Git repository link:\\}
-		 \url{ https://github.com/COS301-ThinkTech}
+		 \url{https://github.com/COS301-ThinkTech/Flowchart-planning-and-simulation-tool}
 		
 		\vfill
 		
