Updated architectural requirements doc

--- a/Documentation/Architectural requirements/architectural requirements.tex
+++ b/Documentation/Architectural requirements/architectural requirements.tex
@@ -38,7 +38,7 @@ This system does not connect with any network, database or any other systems. Mo
   Performance is not a major concern. However, to ensure the system must provide feedback to the user during flowchart building and execution in a reasonable amount of time appropriate data structures and adequate design patterns will be used.
 
   \item[Maintainability:] 
-  Since the whole system will be coded using Object-Oriented Programming (OOP), it will be much easy to update and maintain the system. OOP allows the future development to the system.
+  Since the whole system will be coded using Object-Oriented Programming (OOP), it will be much easy to update, extend and maintain the system. OOP allows the future development of the system.
 
   \item[Availability:]
   The application is available to all desktops running Linux operating system.
