User manual updated

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -122,7 +122,7 @@ However, the user can create new project from the menu bar. To create a new proj
 		
 	\subsection{Opening Existing Project}
 	
-	To open an existing project go to the menu bar and select the "File" option and then select the "Open Project" menu item. Search for an existing flowchart project with the valid extention. The flowchart project will now be loaded onto the canvas and should be able to be updated.
+	To open an existing project go to the menu bar and select the "File" option and then select the "Open" menu item. Search for an existing flowchart project with the valid extention. The flowchart project will now be loaded onto the canvas and should be able to be updated.
 	
 \section{Troubleshooting}
 
