Updated functional requirements spec

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -80,7 +80,7 @@ Only the basic components of standard flowcharts are necessary.\\
       Critical & Important & Nice-To-Have\\
       \midrule	
       createFlowchartProject & addFlowchartComponent &  drag-and-drop flowchart into bin\\
-      deleteFlowchart & editFlowchartComponent & \\
+      deleteFlowchart & editFlowchartComponent & enchanceExecutionWithColours\\
        & deleteFlowchartComponent & \\
        & saveFlowchart & \\
        & loadFlowchart & \\
