Updated Requirements specification

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,titlepage]{article}
+\documentclass[12pt,a4paper,titlepage]{article}
 \usepackage{graphicx}
 \usepackage[margin=1in]{geometry}
 %\usepackage{titling}
@@ -249,4 +249,6 @@ The executeFlowchart use case enables the functionality to execute the flowchart
 \caption{Domain Model Diagram}
 \end{figure}
 
+\newpage
+\input{./architecturalRequirements.tex}
 \end{document}
